<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:overScrollMode="always"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/green"
                        android:textSize="@dimen/text_size_24"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/Email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp" />

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/sign_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/signup_btn"
                            android:fontFamily="@font/poppins_bold"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:text="@string/SignIn"
                            android:textAllCaps="false"
                            android:textColor="@color/white_100"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/donot_have_account_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:layout_toEndOf="@id/sign_in"
                            android:textSize="@dimen/text_size_12"
                            android:text="@string/doNotHaveAccount" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="8dp"
                            android:textSize="@dimen/text_size_12"
                            android:textColor="@color/blue"
                            android:textStyle="bold"
                            android:layout_toEndOf="@id/donot_have_account_txt"
                            android:text="@string/SignUpUnderLine" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
