<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/collect_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/pic_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:elevation="1dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/sign_user_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/pic" />


            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/imageClick"
                android:layout_width="16dp"
                android:layout_height="16dp"

                android:layout_alignBottom="@id/card"
                android:background="@drawable/round_btn"
                android:padding="1dp"
                android:layout_toEndOf="@id/card"
                android:src="@drawable/ic_edit" />
        </RelativeLayout>

        <EditText
            android:id="@+id/signCode"
            android:layout_width="match_parent"

            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text"
            android:hint="@string/Collage_ID"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <Spinner
                android:id="@+id/grade_spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <TextView
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="32dp"
                android:text="@string/choose_grade"
                android:textColor="@color/black_50" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/grade_spinner"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/arrow_drop_down" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <Spinner
                android:id="@+id/department_spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <TextView
                android:id="@+id/department_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="32dp"
                android:text="@string/choose_department"
                android:textColor="@color/black_50" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/department_spinner"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/arrow_drop_down" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <Spinner
                android:id="@+id/section_spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edit_text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <TextView
                android:id="@+id/section_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="32dp"
                android:text="@string/choose_section"
                android:textColor="@color/black_50" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/section_spinner"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/arrow_drop_down" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/signup_btn"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/Sign_Up"
                android:textAllCaps="false"
                android:textColor="@color/white_100"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@id/sign_in"
                android:text="@string/haveAccount"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/sign_up_btn"
                android:text="@string/SignInUnderLine"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>