<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.uni.unistudent.classes.user.UserStudent" />

        <variable
            name="storageViewModel"
            type="com.uni.unistudent.viewModel.FireStorageViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fragment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/profile"
                android:textColor="@color/black_50"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_profile"
                android:layout_width="@dimen/profile_pic_size"
                android:layout_height="@dimen/profile_pic_size"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_name"
                tools:src="@drawable/user_image" />

            <TextView
                android:id="@+id/text_student_name"
                style="@style/MainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_18"
                android:text="@{user.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_profile"
                tools:text="Febronia Sameh" />

            <TextView
                android:id="@+id/text_userid"
                style="@style/TextBodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{user.code}"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_student_name"
                tools:text="febronia2012" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:onClick="OpenSetting"
                android:src="@drawable/ic_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_profile" />

            <LinearLayout
                android:id="@+id/student_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@drawable/profile_background"
                android:elevation="@dimen/small_elevation"
                android:orientation="horizontal"
                android:padding="@dimen/margin_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_userid">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/text_size_12"
                        style="@style/TextBodyStyle.Profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grade" />

                    <TextView
                        android:id="@+id/text_grade"
                        style="@style/TextDataStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_14"
                        android:text="@{user.grade}"
                        tools:text="grade 4" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/view_stroke"
                    android:layout_height="@dimen/view_height"
                    android:background="@color/black_10" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/text_size_12"
                        style="@style/TextBodyStyle.Profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/department" />

                    <TextView
                        android:textSize="@dimen/text_size_14"
                        android:id="@+id/text_department_name"
                        style="@style/TextDataStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.department}"
                        tools:text="CS" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/view_stroke"
                    android:layout_height="@dimen/view_height"
                    android:background="@color/black_10" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="@dimen/text_size_12"
                        style="@style/TextBodyStyle.Profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/section" />

                    <TextView
                        android:textSize="@dimen/text_size_14"
                        android:id="@+id/text_section"
                        style="@style/TextDataStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{user.section}"
                        tools:text="s1" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_courses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/courses"
                android:textColor="@color/black_50"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/student_data" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_courses"
                style="@style/RecyclerStyle"
                android:paddingVertical="@dimen/margin_16dp"
                android:paddingHorizontal="@dimen/margin_8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_courses"
                tools:listitem="@layout/item_profile_course">

            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progress_bar_profile"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_userid" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>